--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -151,6 +151,25 @@
   <a class="btn btn-default" href="#" role="button">Help</a><br>
   <h1 property="name" id="wb-cont" dir="ltr">Latest claim status</h1>
   
+	<nav role="navigation" id="wb-sec" typeof="SiteNavigationElement" class="visible-md visible-lg">
+        <ul class="list-group menu list-unstyled">
+        <li>
+        <h3 class="wb-navcurr">Employment Insurance</h3>
+        <ul class="list-group menu list-unstyled">
+        <li><a class="list-group-item" href="#">Register for Alert Me</a></li>
+        <li><a class="list-group-item" href="#">View my status and correspondence</a></li>
+        <li><a class="list-group-item" href="#">View my latest claim details</a></li>
+        <li><a class="list-group-item" href="#">View my past claims details</a></li>
+        <li><a class="list-group-item" href="#">View my payment information</a></li>
+        <li><a class="list-group-item" href="#">eForms</a></li>
+        <li><a class="list-group-item" href="#">View my Records of Employment</a></li>
+        <li><a class="list-group-item" href="#">View EI publications</a></li>
+        </ul>
+        </li>
+        </ul>
+        </nav>
+	
+	
   <div class="well well-sm">
 	  The status of your claim/application, relevant to the most recent message posted below is <strong>Decision Made</strong>.
 	</div>
@@ -180,7 +199,7 @@
   
  		<!-- Accordion section 1 -->
  		<details open class="acc-group">
- 			<summary class="wb-toggle tgl-tab well" data-toggle='{"parent": ".accordion", "group": ".acc-group", "state": "on"}'>2018-11-30 - Decision Made <br> Claim Finalized</summary>
+ 			<summary class="wb-toggle tgl-tab well-sm" data-toggle='{"parent": ".accordion", "group": ".acc-group", "state": "on"}'>2018-11-30 - Decision Made <br> Claim Finalized</summary>
  			<div class="tgl-panel">
  				<p>We have finalized your claim for Employment Insurance benefits. You can <a href="">view your latest claim information here</a>.</p><br>
 
@@ -191,7 +210,7 @@
  
  		<!-- Accordion section 2 -->
  		<details open class="acc-group">
- 			<summary class="wb-toggle tgl-tab well" data-toggle='{"parent": ".accordion", "group": ".acc-group", "stateOn": ".bar"}'>2018-10-30 - Under Review<br>Application Under Review</summary>
+ 			<summary class="wb-toggle tgl-tab well-sm" data-toggle='{"parent": ".accordion", "group": ".acc-group", "stateOn": ".bar"}'>2018-10-30 - Under Review<br>Application Under Review</summary>
  			<div class="tgl-panel">
 				<p><strong>We've received your Employment Insurance application</strong>.<br>
 					We’re working to process your request and complete your claim in a reasonable amount of time. Once we finish our review:</p>
