--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -166,6 +166,14 @@
       </ul>
     </li>
   </ul>
+		  <ul class="list-group menu list-unstyled">
+    <li>
+      <h3 class="wb-navcurr">View my past claims messages</h3>
+      <ul class="list-group menu list-unstyled">
+        <li class="list-group-item"><a href="#a1-1">Received - 2019-09-08</a></li>
+      </ul>
+    </li>
+  </ul>
 </nav>
 
   </div>
@@ -186,7 +194,7 @@
     <div class="accordion"> 
       
       <!-- Accordion section 1 -->
-      <details open class="acc-group">
+      <details class="acc-group">
         <summary class="wb-toggle tgl-tab well-sm" data-toggle='{"parent": ".accordion", "group": ".acc-group", "state": "on"}'>2018-11-30 - Decision Made <br>
           Claim Finalized</summary>
         <div class="tgl-panel">
@@ -197,7 +205,7 @@
       </details>
       
       <!-- Accordion section 2 -->
-      <details open class="acc-group">
+      <details class="acc-group">
         <summary class="wb-toggle tgl-tab well-sm" data-toggle='{"parent": ".accordion", "group": ".acc-group", "stateOn": ".bar"}'>2018-10-30 - Under Review<br>
           Application Under Review</summary>
         <div class="tgl-panel">
