--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
@@ -190,7 +190,7 @@
 	  <table class="table table-bordered" style="width:100%">
 	 <tbody>
   <tr>
-    <th><a href="###">Start Date of Claim:</a></th>
+    <th class="active"><a href="###">Start Date of Claim:</a></th>
     <td>December 4, 2018</td>
   </tr>
   <tr>
