--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-details.html
@@ -245,7 +245,7 @@
 
 
 	<section>
-		<p><a href="###">Return to Employment Insurance main menu</a></p>
+		<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
 	</section>
 	
 </div>
