--- a/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
+++ b/scenarioA/services/my-account/MSCA/EI/latest-claim-status.html
@@ -260,7 +260,9 @@
 	</ul>
 
   	-->
-    
+ <section>
+		<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
+	</section>   
     </aside>
   </div>
 </div>
