--- a/scenarioA/services/my-account/MSCA/EI/past-claims.html
+++ b/scenarioA/services/my-account/MSCA/EI/past-claims.html
@@ -150,30 +150,23 @@
   <a class="btn btn-default" href="#" role="button">Help</a><br>
   <h1 property="name" id="wb-cont" dir="ltr">My Past Claims</h1>
   
-  <p class="text-right">FIRST NAME  LAST NAME</p><br>
-  <p>View details on your past claims such as payment details and type of benefits received.</p>
+  <p>We have no past claim information for you.</p>
+	<p><strong>- OR - alternate message</strong></p>
+	<table>
+	<tr>
+		<th>Start Date of Claim</th>
+		<th>End Date of Claim</th>
+	</tr>
+	<tr>
+		<td><a href="">August 23, 2019</a></td>
+		<td>January 09, 2020</td>
+	</tr>
+	</table>
   
-   <table width="100%" border="1px">
-    <tr>
-	    <th><center>Start Date of Claim</center></th>
-      <th><center>End Date of Claim</center></th>
-      <th><center><a href="#">Past Claims Messages</center></a></th>
-    </tr>
-    <tr>
-      <td><center><a href="#">November 15, 2016</center></a></td>
-      <td><center>November 17, 2017</center></td>
-      <td><center><a href="#">View messages for this claim</center></a></td>
-    </tr>
-    <tr>
-      <td><center><a href="#">February 22, 2014</center></a></td>
-      <td><center>February 25, 2015</center></td>
-	<td><center>Past claims messages feature unavailable before November 2016</center></td>
-	   
-    </tr>
-  </table><br><br>	
+   
   
-  <a href="">Return to Employment Insurance main menu</a><br><br>
-	
+		<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
+
 </section>
 </aside>
 </div>
