--- a/scenarioA/services/my-account/MSCA/EI/past-claims.html
+++ b/scenarioA/services/my-account/MSCA/EI/past-claims.html
@@ -152,7 +152,9 @@
   
   <p>We have no past claim information for you.</p>
 	<p><strong>- OR - alternate message</strong></p>
-	<table>
+	
+	<table class="table table-bordered" style="width:100%">
+	 <tbody>
 	<tr>
 		<th>Start Date of Claim</th>
 		<th>End Date of Claim</th>
@@ -161,6 +163,7 @@
 		<td><a href="">August 23, 2019</a></td>
 		<td>January 09, 2020</td>
 	</tr>
+		</tbody>
 	</table>
   
    
