--- a/scenarioA/services/my-account/MSCA/EI/past-claims.html
+++ b/scenarioA/services/my-account/MSCA/EI/past-claims.html
@@ -156,8 +156,8 @@
 	<table class="table table-bordered" style="width:100%">
 	 <tbody>
 	<tr>
-		<th>Start Date of Claim</th>
-		<th>End Date of Claim</th>
+		<th class="active">Start Date of Claim</th>
+		<th class="active">End Date of Claim</th>
 	</tr>
 	<tr>
 		<td><a href="">August 23, 2019</a></td>
