--- a/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
+++ b/scenarioA/services/my-account/MSCA/EI/EI-payment-page.html
@@ -11,7 +11,7 @@
      wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 
 <title>My Service Canada Account</title>
-<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script>
+<script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/soyutils.js"></script> 
 <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_30/cdts/compiled/wet-en.js"></script>
 <link href="https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/static-content/msca-mdsc/css/msca-cdtn.css" rel="stylesheet"/>
 <noscript>
@@ -20,12 +20,12 @@
 <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/css/theme.min.css"/>
 <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/cdts/cdtsfixes.css"/>
 <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/cdts/cdtsapps.css"/>
-<!--<![endif]-->
+<!--<![endif]--> 
 
 <!--[if lt IE 9]>
 				<link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/assets/favicon.ico" rel="shortcut icon"/>
 				<link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/css/ie8-theme.min.css"/>
-				<![endif]-->
+				<![endif]--> 
 
 <!--[if lte IE 9]><![endif]-->
 <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_29/css/noscript.min.css"/>
@@ -37,11 +37,11 @@
 <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/cdts/cdtsfixes.css">
 <!-- Are you using the application templates? If so add the following CSS file -->
 <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/cdts/cdtsapps.css">
-<!--<![endif]-->
+<!--<![endif]--> 
 <!--[if lt IE 9]>
 <link href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/assets/favicon.ico" rel="shortcut icon" />
 <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/css/ie8-theme.min.css" />
-<![endif]-->
+<![endif]--> 
 <!--[if lte IE 9]><![endif]-->
 <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/css/noscript.min.css" />
 <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_26/cdts/cdtsnoscript.css" />
@@ -138,116 +138,78 @@
         <div class="row">
           <ol class="breadcrumb">
             <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a></li>
-            <li>
-                <a href="###">EI</a>
-            </li>
-            <li>
-            My payments
-            </li>
+            <li> <a href="###">EI</a> </li>
+            <li> My payments </li>
           </ol>
-       
-       </div>
+        </div>
       </div>
     </nav>
   </header>
 </div>
+<section class="container"> <a class="btn btn-default" href="#" role="button">Featured services</a> <a class="btn btn-default" href="#" role="button">Help</a></section>
+<main class="container" property="mainContentOfPage" role="main">
+<span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
+<h1 property="name" id="wb-cont">My Payments</h1>
 
-	<section class="container">
-  <a class="btn btn-default" href="#" role="button">Featured services</a>
-  <a class="btn btn-default" href="#" role="button">Help</a></section>
-	
-<main class="container" property="mainContentOfPage" role="main"><span id="pageTemplate:j_id__ctru6pc6" class="af_panelGroupLayout">
+<div class="panel panel-default"> 
+        <!-- Default panel contents -->
+  <div class="panel-heading"><strong>Did you know...</strong></div>
+        
+   <!-- List group -->
+   <ul>
+          <li>If you do not receive email alerts when new important Employment Insurance (EI) claim information is available in your My Service Canada Account, go to <a href="">View my status and correspondence</a></u> and select "Register for Alert Me" from the left-hand menu to register now!
+          </li>
+          <li>Additional information on your past claims may be available on the <a href="">View my status and correspondence</a> page.
+          </li>
 
-
-  
-							<h1 property="name" id="wb-cont">My Payments</h1>    
-       </div>
-      </div>
-    </div>
+   </ul>
   </div>
-  <br />
-	 
-   <p>To prevent any delays, <strong>you must complete your report within three weeks of its due date.</strong></p>
-   
-   <section>
-<div>
-  <table class="table table-bordered" style="width:100%">
-	  
-	  <thead>
-		 
-		  <th scope="col">Report Covering Period</th>
-		  <th scope="col">Data Report Processed</th>
-		  <th scope="col">Net Amount Paid</th>
-		  <th scope="col"><u>Amended Report</u></th>
-	  </thead>
-  
-	 <tbody>
-		 <tr>
-			
-			 <td><a href="###">January 15, 2019 to January 29, 2010</a></td>
-			 <td>February 8, 2019</td>
-			 <td>$382</td>
-			 <td>No</td>
-		 </tr>
-		 <tr>
-			 <td><a href="###">January 1, 2019 to January 14, 2019</a></td>
-			 <td>January 24, 2019</td>
-			 <td>$382</td>
-			 <td>No</td>
-		 </tr>
-		 <tr>
-			<td><a href="###">December 19, 2018 to December 31, 2018</a></td>
-			 <td>January 10, 2019</td>
-			 <td>$382</td>
-			 <td>No</td>
-		 </tr>
-		 
-		 <tr>
-			<td><a href="###">December 4, 2018 to December 18, 2018</a></td>
-			 <td>December 28, 2018</td>
-			<td>$382</td>
-			 <td>No</td>
-		 </tr>
- 
-
-	 </tbody>
-	</table>
-	<p>See more <a href="###">details on your EI claim here</a>.</p>
-	<div>
-		</section>
-	<section>
-		<p>Please note that this is the most up-to-date information available in our system. Our Call Centre agents have access to the same information presented here. Any information on your claim today can be viewed online on the next business day. </p>
-	</section>
-	
-	<h3>Direct Deposit for EI</h3>
-	<p>You're not currently signed up for Direct Deposit which is our standard method for issuing EI payments. With Direct Deposit:</p>
-	<ul>
-		<li>your EI payments are deposited electronically into your bank account</li>
-		<li>you'll receive your payments faster</li>
-	</ul>
-	</section>
-	  
-	   <section>
-	   <a class="btn btn-primary" href="###">Sign up for Direct Deposit today</a>
-	   </section>
+<p>You are currently not signed up for Direct Deposit which is our standard method for issuing EI payments. with Direct Deposit, your EI payments are deposited electronically into your bank account. This means that you will receive your payments faster.</p>
+<p>Apply for Direct Deposit now using our secure online service. From the My Service Canada Account Home page click on the "<strong>Change</strong>" tab and then click the "<strong>View/change my Direct Deposit</strong>" link under the "Employment Insurance (EI)" heading to enter or change your bank account information.</p>
 <section>
-	<h3>Related links</h3>
-	<ul>
-		<li><a href-"###">View my EI status and correspondence</a></li>
-		<li><a href="###">My past claim details</a></li>
-		<li><a href="###">Records of Employment</a></li>
-		<li><a href="###">Declare a training or absence from Canada</a></li>
-		<li><a href="###">I made a mistake on my EI report</a></li>
-	</ul>
-</section>
-	   <section>
-		   <a href="###">Return to Employment Insurance main menu</a>
-	   </section>
-   
-   
+<div>
+<table class="table table-bordered" style="width:100%">
+  <thead>
+  <th class="active">Report Covering Period</th>
+    <th class="active">Data Report Processed</th>
+   <th class="active">Net Amount Paid</th>
+    <th class="active"><u>Amended Report</u></th>
+    </thead>
+  <tbody>
+    <tr>
+      <td><a href="###">January 15, 2019 to January 29, 2010</a></td>
+      <td>February 8, 2019</td>
+      <td>$382</td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td><a href="###">January 1, 2019 to January 14, 2019</a></td>
+      <td>January 24, 2019</td>
+      <td>$382</td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td><a href="###">December 19, 2018 to December 31, 2018</a></td>
+      <td>January 10, 2019</td>
+      <td>$382</td>
+      <td>No</td>
+    </tr>
+    <tr>
+      <td><a href="###">December 4, 2018 to December 18, 2018</a></td>
+      <td>December 28, 2018</td>
+      <td>$382</td>
+      <td>No</td>
+    </tr>
+  </tbody>
+</table>
+<p>Please note that this is the most up-to-date information available in our system. Our Call Centre agents have access to the same information presented here. Any information on your claim today can be viewed online on the next business day.</p>
 
+  <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p> 
 
-  </span> 
+  </div>
+</div>
+</span> 
+
                           <script type="text/javascript">var defPreFooter = document.getElementById("def-preFooter");
 				defPreFooter.outerHTML = wet.builder.preFooter({
 					cdnEnv: "prod",dateModified: "2019-06-05",screenIdentifier: "MSCA M 001",showPostContent: false,
