--- a/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html
+++ b/scenarioA/services/my-account/MSCA/EI/eForm/mistakes-can-happen.html
@@ -175,9 +175,7 @@
    <li><a href="###">write or go to your nearest Service Canada Centre</a></li>
    </ul><br>
    
-	   <section>
-		   <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html">Return to Employment Insurance main menu</a><br>
-	   </section>
+	   <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
    
    
 
