--- a/scenarioA/services/my-account/MSCA/landing-page-ei.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-ei.html
@@ -205,9 +205,9 @@
         <div class="panel-body">
           <h2 id="a1-2" class="h3 mrgn-tp-0">Personal information</h2>
           <p>Personal information services allow you to display the mailing address, telephone number, direct deposit information and preferred language of service that we currently have for you. You can amend your mailing address, telephone number or preferred language of service. You can also register for or amend your direct deposit information. </p>
-          <button type="button" class="btn btn-default">Mailing address and telephone number</button>
-          <button type="button" class="btn btn-default">Direct Deposit (EI)</button>
-          <button type="button" class="btn btn-default">Preferred language for written communications</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html';" type="button" class="btn btn-default">Mailing address and telephone number</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/direct-deposit.html';" type="button" class="btn btn-default">Direct Deposit (EI)</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/personal-information/language.html';" type="button" class="btn btn-default">Preferred language for written communications</button>
         </div>
       </div>
       
@@ -216,7 +216,7 @@
         <div class="panel-body">
           <h2 id="a1-3" class="h3 mrgn-tp-0">Records of Employment</h2>
           <p>Allows you to view and print ROEs submitted electronically by your employer during the last seven years. It also provides some information on ROEs that were submitted in paper format within the last seven years.</p>
-          <button type="button" class="btn btn-default">Records of Employment</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/records-of-employment.html';" type="button" class="btn btn-default">Records of Employment</button>
         </div>
       </div>
       <div class="panel panel-default">
@@ -246,14 +246,14 @@
         <div class="panel-body">
           <h2 id="a1-7" class="h3 mrgn-tp-0">Self-employed</h2>
           <p>Self-employed Canadians can access Employment Insurance (EI) special benefits by entering into an agreement, or registering, with the Canada Employment Insurance Commission. </p>
-          <button type="button" class="btn btn-default">Self-employment Agreement, Register and/or status  </button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/self-employed.html';" type="button" class="btn btn-default">Self-employment Agreement, Register and/or status  </button>
         </div>
       </div>
 		<div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-8" class="h3 mrgn-tp-0">Province of residence</h2>
           <p>Allows you to select the specific Province in which you reside and are claiming EI benefits. Selecting the c orrect Province ensures that you can access your EI information. </p>
-          <button type="button" class="btn btn-default">Province of residence</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/province.html';" type="button" class="btn btn-default">Province of residence</button>
         </div>
       </div>
 		<div class="panel panel-default">
