--- a/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html
+++ b/scenarioA/services/my-account/MSCA/EI/personal-information/address-telephone.html
@@ -178,10 +178,7 @@
 
     <button type="button" class="btn btn-default">Change</button>
  
-	  <br /> <section>
-		   <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html">Return to Employment Insurance main menu</a><br>
-	   </section>
-<br />
+	  <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
    
 
 
