--- a/scenarioA/services/my-account/MSCA/EI/personal-information/language.html
+++ b/scenarioA/services/my-account/MSCA/EI/personal-information/language.html
@@ -172,11 +172,8 @@
   <p>Change your written language preference to <strong>French</strong>.</p>
     <button type="button" class="btn btn-default">Continue</button>
 <button type="button" class="btn btn-default">Cancel changes</button>  
-	   <br />
-<section>
-		   <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html">Return to Employment Insurance main menu</a><br>
-	   </section>
-   <br />
+
+<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
 
 
 
