--- a/scenarioA/services/my-account/MSCA/EI/records-of-employment.html
+++ b/scenarioA/services/my-account/MSCA/EI/records-of-employment.html
@@ -169,7 +169,8 @@
 <p>The following ROE were submitted electronically to Service Canada by your employers.</p>
 <p><strong>If you are having trouble viewing your electronic ROE, please ensure that your pop-up blocker is turned off.</strong></p>
 
-<table>
+<table class="table table-bordered" style="width:100%">
+	 <tbody>
 <tr>
 	<th>Select</th>
 	<th>Employer Name</th>
@@ -207,6 +208,7 @@
 		<td>MMM DD, YYYY</td>
 		<td>MMM DD, YYYY</td>
 	</tr>
+	</tbody>
 </table>
 
 <button type="button" class="btn btn-default">View</button>
@@ -214,7 +216,8 @@
 <p>To open and print Records of Employment, you will need the free Adobe Acrobat Reader.  For further information, please consult the How to Download page.</p>
 <p>The following ROEs were issued to you in a paper format and this information is only to confirm receipt at the Service Canada Processing Centre.</p>
  
-<table>
+<table class="table table-bordered" style="width:100%">
+	 <tbody>
 <tr>
 	<th>Serial Number</th>
 	<th>First day worked</th>
@@ -225,11 +228,10 @@
 		<td>July 03, 2015</td>
 		<td>August 05, 2016</td>
 	</tr>
+	</tbody>
 </table>
-	  <br /> <section>
-		   <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html">Return to Employment Insurance main menu</a><br>
-	   </section>
-<br />
+
+<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
    
 
 
