--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
@@ -153,6 +153,8 @@
   
 <p>Please check the information you entered is accurate, then submit your request.</p>	
 
+<div class="row">
+	<div class="col-md-3">
 <section class="panel panel-info">
   <div class="panel-body">
    <p>
@@ -173,6 +175,9 @@
    </p>
   </div>
 </section><br>
+	</div>
+	</div>
+	
 
 <a class="btn btn-primary" href="###">Add another child</a><br><br>
 
@@ -201,7 +206,7 @@
 <p>Your personal information may be used and/or disclosed for policy analysis, research and/or evaluation purposes. However, these additional uses and/or disclosures of your personal information will never result in an administrative decision being made about you.</p>
 <p>Your personal information is administered in accordance with the Privacy Act and other applicable laws governing the protection of personal information under the control of ESDC. Under the DESD Act and Privacy Act you have the right to look at the personal information in your file and request correction. We will keep this information in Personal Information Bank ESDC PPU 146 (Retirement, Disability, Survivors and Death benefits). You can ask to see your file by contacting a Service Canada office. Instructions for requesting personal information are provided in the government publication Info Source.</p>
 
-<span class="label label-warning" height="55">[Note: If the client is applying for RTR with CRP, the continue button will return to the RTR application, SBT B 029]</span><br>
+<span class="label label-warning">[Note: If the client is applying for RTR with CRP, the continue button will return to the RTR application, SBT B 029]</span><br>
 <a class="btn btn-primary" style="margin-left:0px; margin-top:10px; margin-bottom:10px; margin-right:10px;" href="###">Continue</a>
 <a class="btn btn-default" style="margin-left:0px; margin-top:10px; margin-bottom:10px; margin-right:10px;" href="###">Cancel</a><br>
 
