--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
@@ -137,7 +137,7 @@
         <div class="row">
           <ol class="breadcrumb">
             <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a>> <a href="#">CPP/OAS</a></li>
-            <li>CPP Earnings and Contributions</li>
+            <li>My child-rearing provision - Confirm information</li>
           </ol>
         </div>
       </div>
