--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
@@ -136,7 +136,7 @@
       <div class="container">
         <div class="row">
           <ol class="breadcrumb">
-            <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a>> <a href="#">CPP/OAS</a></li>
+            <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a> <a href="###">CPP/OAS</a></li>
             <li>My child-rearing provision - Confirm information</li>
           </ol>
         </div>
@@ -154,7 +154,7 @@
 <p>Please check the information you entered is accurate, then submit your request.</p>	
 
 <div class="row">
-	<div class="col-md-3">
+	<div class="col-md-5">
 <section class="panel panel-info">
   <div class="panel-body">
    <p>
