--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
@@ -154,10 +154,10 @@
 <p>Please check the information you entered is accurate, then submit your request.</p>	
 
 <div class="row">
-	<div class="col-md-6">
+	<div class="col-md-4">
 <section class="panel panel-info">
   <div class="panel-body">
-   <p>
+   <p style="text-align:center;">
    <table style="width:25%" cellspacing="10">
   <tr>
     <th>Name:</th>
