--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Confirm-Info.html
@@ -157,7 +157,7 @@
 	<div class="col-md-4">
 <section class="panel panel-info">
   <div class="panel-body">
-   <p style="text-align:center;">
+   <p style="text-align:right;">
    <table style="width:25%" cellspacing="10">
   <tr>
     <th>Name:</th>
