--- a/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html
+++ b/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax-Slips-Mailing.html
@@ -156,7 +156,8 @@
 	
   
   <h1 property="name" id="wb-cont" dir="ltr">Change My Tax Slip Delivery</h1>
-  
+
+		<p><strong>--We have started our mailing process for the current year tax year. If you change your tax slip delivery now, the change will take effect on DD MM, YYYY. [following year] [This paragraph appears only when the client accesses TISO during the year end processing period]--</strong></p>
   <h3>CPP and/or OAS Tax Slips</h3>  
     
     <p>Currently you get your CPP and/or OAS tax slips <strong>by mail</strong>.</p>
@@ -165,8 +166,9 @@
   
 <div class="form-group">	
 <div class="input"><select class="form-control">
-		<option value="Online">Online</option>
 		<option value="Mail">Mail</option>	
+	<option value="Online">Online</option>
+		
 </select>
 </div>
 </div>
@@ -178,8 +180,8 @@
   <div class="mrgn-tp-md mrgn-bttm-lg brdr-bttm">
   <div class="form-group">	
 <div class="input"><select class="form-control">
-		<option value="Online">Online</option>
 		<option value="Mail">Mail</option>	
+	<option value="Online">Online</option>	
 </select>
 </div>
 </div> 
@@ -193,7 +195,7 @@
 <a class="btn btn-primary" href="###">Submit</a>
 <a class="btn btn-default" href="###">Cancel</a>
 		</section>
-
+<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
 	
 </div>
 </div>
