--- a/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html
+++ b/scenarioA/services/my-account/MSCA/EI/Tax_Slips/Tax_Slips_T4E.html
@@ -156,14 +156,37 @@
 		<li>NR4 (OAS)</li>
 		<li>T4E - Employment Insurance Benefits</li>
 	</ul>
-  	<p>You will be able to get your tax slips online earlier rather than waiting for them to arrive by mail. To get your tax slip online, select "Online" using the"</p><a href="#">Change My Tax Slip Delivery</a>" feature. You can reactivate the mail option using the same feature.<br><br>Below are your Canada Pension Plan (CPP) and/or Old Age Security (OAS) and Employment Insurance (EI) tax slips for current and/or previous years.<br><br>Depending on which benefits you are receiving, you may have more than one tax slip.<br><br>When initially opened, "View Tax Slips" shows your slips for the current tax year. If you have not received any payments under Canada Pension Plan (CPP), Old Age Security (OAS) or Employment Insurance (EI) during the current tax year, the page will read "You have no tax slips for YYYY" (current year).</p><br>
+  	<p>You will be able to get your tax slips online earlier rather than waiting for them to arrive by mail. To get your tax slip online, select "Online" using the"</p><a href="#">Change My Tax Slip Delivery</a>" feature. You can reactivate the mail option using the same feature.<br><br>
+  	Below are your <strong>Canada Pension Plan (CPP) and/or Old Age Security (OAS) and Employment Insurance (EI) [changes depending on user] </strong>tax slips for current and/or previous years.<br><br>Depending on which benefits you are receiving, you may have more than one tax slip.<br><br>When initially opened, "View Tax Slips" shows your slips for the current tax year. If you have not received any payments under Canada Pension Plan (CPP), Old Age Security (OAS) or Employment Insurance (EI) during the current tax year, the page will read "You have no tax slips for YYYY" (current year).</p><br>
 	<div class="col-md-12 brdr-tp"><strong>Tax Slips for 2018</strong></div><br><br>
+	<p>--Below is a list of <strong>all</strong> possible tax slips that are available to the clients.--</p>
 	<p><strong>CPP and/or OAS Tax Slips</strong></p>
 	
-	<li><a href="#">IA - T4A (P) - Retirement - Original</a></li>
-	<p>Statement of Canada Pension Plan Benefits</p>
-	<li><a href="#">IA - T4A (OAS) - Original</a></li>
-	<p>Statement of Old Age Security</p><br><br>
+	<ul>
+  <li><a href="">IA T4A (P) - Retirement / Disability / Survivor / etc... - <strong>Original / Amendment / Duplicate / Cancelled</strong></a><br />
+	  Statement of Canada Pension Plan Benefits</li>
+<br />
+	<li><a href="">IA T4A (OAS) - Original</a><br />
+	Statement of Old Age Security</li>
+<br />
+	<li><a href="">Reimbursement of Benefit Paid During a Previous Year - <strong>Original / Amendment / Duplicate / Cancelled</strong></a></li>
+
+<br />
+<li><a href="">IA NR4 - Taxable Canada Pension Plan Benefits - <strong>Original / Amendment / Duplicate / Cancelled</strong></a><br />
+Statement of Amounts Paid or Credited to Non-Residents of Canada</li>
+<br />
+<li><a href="">IA NR4 (OAS) - Old Age Security Payments</a><br />
+	Statement of OAS Pension Paid or Credited to Non-Residents of Canada</li>
+</ul>
+	
+	<p><strong>Employment Insurance Tax Slips</strong></p>
+	
+	<ul>
+  <li><a href="">T4E - Employment Insurance Benefits - <strong>Original / Amendment/ Duplicate</strong></a><br />
+	  Statement of Employment Insurance and Other Benefits</li>
+
+</ul>
+	
 	<p>If you want to see your tax slips for previous years, you can select the year from the "Tax year" list. The list will go as far back as 6 years plus the current year.</p>
 	<br>
 	View tax slips for another year: 
@@ -190,7 +213,7 @@
 		<li>Amended <strong>EI</strong> tax slips will be available online 4 to 6 weeks after the amendment is processed.</li>
 		<li>If you have lost your amended copy or if you wish to make any additional changes to your tax slips, please <a href="#"> contact us</a>.</li>
 <br><br>
-	
+	<p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
 </section>
 </aside>
 </div>
@@ -225,7 +248,7 @@
 						"logouturl" : "https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/logout",
 						"refreshCallbackUrl": "https://srv241-s2.lab.hrdc-drhc.gc.ca/sc/sys2/msca-mdsc/portal-portail/pro/portal/page/portal/msca/private/faces/oracle/webcenter/portalapp/pages/session-refresh.jspx",
 						"refreshOnClick" : false }'></span> 
-				<script type="text/javascript">_satellite.pageBottom();</script></span>
+<script type="text/javascript">_satellite.pageBottom();</script></span>
                 <div id="document::msgCtr" style="display:none">
   <div id="document::msgDlg" class="af_dialog">
                     <div class="af_dialog_inactive-background" _afrPanelWindowBackground="1"></div>
@@ -309,7 +332,7 @@
                   </div>
 </DIV>
                 </div>
-                <script type="text/javascript">AdfBootstrap._onLoad=function (){if (AdfPage.PAGE.__checkRichResponseDirty()) return;var isCachedPage = false;if (!isCachedPage){window.name='jtuuy02hd';};AdfAgent.AGENT.elementsAdded(document);AdfDhtmlLookAndFeel.addSkinProperties({"af|dialog-tr-open-animation-duration":"300","af|messages::summary":"af_messages_summary","AFPopupSelectorFooterStart":"AFPopupSelectorFooterStart","af|message::container":"af_message_container","AFPopupSelectorContentEnd":"AFPopupSelectorContentEnd","af|message::detail-cell":"af_message_detail-cell","AFPopupSelectorContent":"AFPopupSelectorContent","af|messages::message-group-list":"af_messages_message-group-list","af|message::component-messages-list-container":"af_message_component-messages-list-container","af|dialog::resize-ghost":"af_dialog_resize-ghost","AFPopupSelectorFooterEnd":"AFPopupSelectorFooterEnd","af|messages::intro":"af_messages_intro",".AFPopupSelector-tr-animate":"true","af|popup-tr-shadow-starting-black-percent":100,"AFPopupSelector":"AFPopupSelector",".AFWorkaround-tr-disable-property-delta-sync":"false","af|popup-tr-shadow-pixel-size":4,"af|messages::message-group-type-separator":"af_messages_message-group-type-separator","af|messages::message-group-title":"af_messages_message-group-title","af|message::message-list-component":"af_message_message-list-component","af|message::intro":"af_message_intro","af|popup-tr-shadow-offset":3,"AFPopupSelectorHeader":"AFPopupSelectorHeader","af|messages::detail":"af_messages_detail","af|message::type":"af_message_type","AFPopupSelectorHeaderStart":"AFPopupSelectorHeaderStart","af|message::detail":"af_message_detail","af|messages::header-text":"af_messages_header-text",".AFNoteWindow-tr-open-animation-duration":"200","af|message::icon-cell":"af_message_icon-cell","AFPopupSelectorContentStart":"AFPopupSelectorContentStart","AFPopupSelectorFooter":"AFPopupSelectorFooter","af|messages::message-list-page":"af_messages_message-list-page","AFPopupSelectorHeaderEnd":"AFPopupSelectorHeaderEnd",".AFNoteWindow-tr-animate":"true","af|messages::component-link":"af_messages_component-link",".AFPopupSelector-tr-open-animation-duration":"200","af|dialog-tr-animate":"true","af|message::summary":"af_message_summary"});AdfPage.PAGE.addComponents(new AdfRichDocument('document',{'title':'My Service Canada Account - Home'}),new AdfRichDialog('document::msgDlg',{'okVisible':false,'cancelVisible':false,'cancelTextAndAccessKey':'OK','modal':false,'resize':'on','title':''}),new AdfDialogServicePopupContainer('afr::DlgSrvPopupCtnr'),new AdfRichPopup('j_id38',{'contentDelivery':'immediate'}),new AdfRichDialog('j_id39',{'okVisible':false,'cancelVisible':false,'closeIconVisible':false}));AdfPage.PAGE.setDefaultMessageHandlerComponentId("document");AdfPage.PAGE.__initUserInactivityTimeout(600000);page.__setCssSelectorsUncompressed(true);AdfPage.PAGE.__setViewId('/oracle/webcenter/portalapp/pages/home.jspx');var exScripts=AdfBootstrap._extendedScripts;for (var i=0;i<exScripts.length;i++){exScripts[i]()};AdfBootstrap._extendedScripts=null;AdfPage.PAGE.__onLoad();};window.onload=AdfBootstrap._onLoad;</script><script type="text/javascript">AdfBootstrap._extendedScripts=[];</script>
+<script type="text/javascript">AdfBootstrap._onLoad=function (){if (AdfPage.PAGE.__checkRichResponseDirty()) return;var isCachedPage = false;if (!isCachedPage){window.name='jtuuy02hd';};AdfAgent.AGENT.elementsAdded(document);AdfDhtmlLookAndFeel.addSkinProperties({"af|dialog-tr-open-animation-duration":"300","af|messages::summary":"af_messages_summary","AFPopupSelectorFooterStart":"AFPopupSelectorFooterStart","af|message::container":"af_message_container","AFPopupSelectorContentEnd":"AFPopupSelectorContentEnd","af|message::detail-cell":"af_message_detail-cell","AFPopupSelectorContent":"AFPopupSelectorContent","af|messages::message-group-list":"af_messages_message-group-list","af|message::component-messages-list-container":"af_message_component-messages-list-container","af|dialog::resize-ghost":"af_dialog_resize-ghost","AFPopupSelectorFooterEnd":"AFPopupSelectorFooterEnd","af|messages::intro":"af_messages_intro",".AFPopupSelector-tr-animate":"true","af|popup-tr-shadow-starting-black-percent":100,"AFPopupSelector":"AFPopupSelector",".AFWorkaround-tr-disable-property-delta-sync":"false","af|popup-tr-shadow-pixel-size":4,"af|messages::message-group-type-separator":"af_messages_message-group-type-separator","af|messages::message-group-title":"af_messages_message-group-title","af|message::message-list-component":"af_message_message-list-component","af|message::intro":"af_message_intro","af|popup-tr-shadow-offset":3,"AFPopupSelectorHeader":"AFPopupSelectorHeader","af|messages::detail":"af_messages_detail","af|message::type":"af_message_type","AFPopupSelectorHeaderStart":"AFPopupSelectorHeaderStart","af|message::detail":"af_message_detail","af|messages::header-text":"af_messages_header-text",".AFNoteWindow-tr-open-animation-duration":"200","af|message::icon-cell":"af_message_icon-cell","AFPopupSelectorContentStart":"AFPopupSelectorContentStart","AFPopupSelectorFooter":"AFPopupSelectorFooter","af|messages::message-list-page":"af_messages_message-list-page","AFPopupSelectorHeaderEnd":"AFPopupSelectorHeaderEnd",".AFNoteWindow-tr-animate":"true","af|messages::component-link":"af_messages_component-link",".AFPopupSelector-tr-open-animation-duration":"200","af|dialog-tr-animate":"true","af|message::summary":"af_message_summary"});AdfPage.PAGE.addComponents(new AdfRichDocument('document',{'title':'My Service Canada Account - Home'}),new AdfRichDialog('document::msgDlg',{'okVisible':false,'cancelVisible':false,'cancelTextAndAccessKey':'OK','modal':false,'resize':'on','title':''}),new AdfDialogServicePopupContainer('afr::DlgSrvPopupCtnr'),new AdfRichPopup('j_id38',{'contentDelivery':'immediate'}),new AdfRichDialog('j_id39',{'okVisible':false,'cancelVisible':false,'closeIconVisible':false}));AdfPage.PAGE.setDefaultMessageHandlerComponentId("document");AdfPage.PAGE.__initUserInactivityTimeout(600000);page.__setCssSelectorsUncompressed(true);AdfPage.PAGE.__setViewId('/oracle/webcenter/portalapp/pages/home.jspx');var exScripts=AdfBootstrap._extendedScripts;for (var i=0;i<exScripts.length;i++){exScripts[i]()};AdfBootstrap._extendedScripts=null;AdfPage.PAGE.__onLoad();};window.onload=AdfBootstrap._onLoad;</script><script type="text/javascript">AdfBootstrap._extendedScripts=[];</script>
 </body>
 <!--Created by Oracle ADF (ADF Faces API - 11.1.1.9.0 / ADF Faces Implementation - 11.1.1.9.0, RCF-revision: 63592 (branch: faces-1507-11.1.1.9.0-release, plugins: 1.2.3.1), Trinidad-revision: 2816 (branch: 1.2.12.9.0.release-branch, plugins: 1.2.10.3), build: adf-faces-rt_171102_1221, patch: MLR-27056561, libNum: 7306 / ADF-Controller{Oracle-BuildSystem=Linux - java - 1.6.0_35-b10, Oracle-Version=11.1.1.9.40.66.73, Oracle-Internal-Release=None, Created-By=20.10-b01 (Sun Microsystems Inc.), Oracle-Builder=user=brmohant host=slc05ynp, Oracle-Label=JDEVADF_11.1.1.9.0_GENERIC_RELEASE, Oracle-BuildTimestamp=2017-10-23 08:36:39 -0700} ADF-Model{Oracle-BuildSystem=Linux - java - 1.6.0_35-b10, Oracle-Version=11.1.1.9.40.66.73, Oracle-Internal-Release=None, Created-By=20.10-b01 (Sun Microsystems Inc.), Oracle-Builder=user=brmohant host=slc05ynp, Oracle-Label=JDEVADF_11.1.1.9.0_GENERIC_RELEASE, Oracle-BuildTimestamp=2017-10-23 08:30:21 -0700} ADF-Share{Oracle-BuildSystem=Linux - java - 1.6.0_35-b10, Oracle-Version=11.1.1.9.40.66.73, Oracle-Internal-Release=None, Created-By=20.10-b01 (Sun Microsystems Inc.), Oracle-Builder=user=brmohant host=slc05ynp, Oracle-Label=JDEVADF_11.1.1.9.0_GENERIC_RELEASE, Oracle-BuildTimestamp=2017-10-23 08:09:31 -0700}  / powered by JavaServer Faces - 1.2), accessibility (mode:null, contrast:standard, size:medium), skin:wet4-cdts.desktop (wet4-cdts)-->
 </html>
