--- a/scenarioA/services/my-account/MSCA/EI/province.html
+++ b/scenarioA/services/my-account/MSCA/EI/province.html
@@ -196,7 +196,7 @@
     <button type="button" class="btn btn-primary">Apply</button>
 <button type="button" class="btn btn-danger">Cancel</button>  
 	  <br /> <section>
-		   <a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/EI/EI-Landing-Page/landingpg-w-anchorlinks.html">Return to Employment Insurance main menu</a><br>
+		   <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-ei.html">Return to Employment Insurance main menu</a></p>
 	   </section>
 <br />
    
