--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
@@ -171,7 +171,7 @@
 
 <p>Depending on which benefits you are receiving, you may have more than one tax slip.</p>
 
-<p>When initially opened, "View Tax Slips" shows your slips for the current tax year. If you have not received any payments under Canada Pension Plan (CPP), Old Age Security (OAS) or Employment Insurance (EI) during the current tax year, the page will read "You have no tax slips for YYYY" (current year).</p>
+<p>When initially opened, "View Tax Slips" shows your slips for the current tax year. If you have not received any payments under Canada Pension Plan (CPP), Old Age Security (OAS) or Employment Insurance (EI) during the current tax year, the page will read "You have no tax slips for YYYY" (current year).</p><br>
 
 <div class="col-md-12 brdr-bttm"></div><br>
 
