--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
@@ -189,7 +189,7 @@ Statement of Old Age Security</li>
 <li><a href="###">Reimbursement of Benefit Paid During a Previous Year</a> - <strong><a href="###">Original / Amendment / Duplicate / Cancelled</a></strong></li>
 <li><a href="###">IA NR4 - Taxable Canada Pension Plan Benefits</a> - <strong><a href="###">Original / Amendment / Duplicate / Cancelled</strong></a><br>
 Statement of Amounts Paid or Credited to Non-Residents of Canada</li>
-<li>IA NR4 (OAS) - Old Age Security Payments<br>
+<li><a href="###">IA NR4 (OAS) - Old Age Security Payments</a><br>
 Statement of OAS Pension Paid or Credited to Non-Residents of Canada</li>
 </ul>
 
