--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
@@ -196,7 +196,7 @@ Statement of OAS Pension Paid or Credited to Non-Residents of Canada</li>
 <h3>Employment Insurance Tax Slips</h3>
 <ul>
 <li><a href="###">T4E - Employment Insurance Benefits</a> - <strong><a href="###">Original / Amendment/ Duplicate</strong></a><br>
-Statement of Employment Insurance and Other Benefits</li>
+Statement of Employment Insurance and Other Benefits</li><br>
 <p><strong>- or -</strong> depending if there are no tax slips available.</p><br>
 <p><strong>You have no tax slips available for YYYY [year changes depending on the year selected].</strong></p>
 <p>If you want to see your tax slips for previous years, you can select the year from the "Tax year" list. The list will go as far back as 6 years plus the current year.</p>
