--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html
@@ -197,6 +197,7 @@ Statement of OAS Pension Paid or Credited to Non-Residents of Canada</li>
 <ul>
 <li><a href="###">T4E - Employment Insurance Benefits</a> - <strong><a href="###">Original / Amendment/ Duplicate</strong></a><br>
 Statement of Employment Insurance and Other Benefits</li><br>
+	</ul>
 <p><strong>- or -</strong> depending if there are no tax slips available.</p><br>
 <p><strong>You have no tax slips available for YYYY [year changes depending on the year selected].</strong></p>
 <p>If you want to see your tax slips for previous years, you can select the year from the "Tax year" list. The list will go as far back as 6 years plus the current year.</p>
@@ -212,7 +213,7 @@ Statement of Employment Insurance and Other Benefits</li><br>
 </select>
 </div><br>
 
-<a class="btn btn-primary" href="###">View</a><br>
+<a class="btn btn-primary" href="###">View</a><br><br>
 <p><strong>Note:</strong> The individual tax slips contain links to information regarding your benefits.</p>
 <h3>Amendments:</h3>
 <ul>
