--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/Apply_step1.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/Apply_step1.html
@@ -266,7 +266,7 @@
 </section>	
 	 <button type="button" class="btn btn-primary">Confirm</button>
 	<button type="button" class="btn btn-default">Cancel</button><br><br>
-	<a href="#">Return to Canada Pension Plan/Old Age Security main menu</a><br><br>
+	<a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to Canada Pension Plan/Old Age Security main menu</a><br><br>
 	
 	</section>
   
