--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Transaction-Info.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Transaction-Info.html
@@ -136,7 +136,8 @@
       <div class="container">
         <div class="row">
           <ol class="breadcrumb">
-            <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a> <a href="###">CPP/OAS</a></li>
+            <li><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/lobby-wax.html">MSCA</a></li> 
+		    <li><a href="###">CPP/OAS</a></li>
             <li>My child-rearing provision - Transaction information</li>
           </ol>
         </div>
