--- a/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status.html
@@ -174,7 +174,7 @@
 <ul class="list-unstyled">
 	<li>
 		<details>
-			<summary><a href="#">01 Jun 2018 - In Progress<br>Canada Pension Plan, Survivor</a></summary>
+			<summary>01 Jun 2018 - In Progress<br>Canada Pension Plan, Survivor</summary>
 			We have received your application. We are working to process your request and complete your application in a responsible period of time. Once this is done, we will update your application status and let you know our decision.<br><br>
 			If you have any supporting documents that you need to provide, please submit them to us as soon as possible. You can submit them in person at your nearest Service Canada office or you can mail them to Service Canada.
 
@@ -182,23 +182,22 @@
 	</li>
 	<li>
 		<details>
-			<summary><a href="#">01 Jun 2018 - In Progress<br>Canada Pension Plan, Retirement</a></summary>
+			<summary>01 Jun 2018 - In Progress<br>Canada Pension Plan, Retirement</summary>
 			We have received your application. We are working to process your request and complete your application in a responsible period of time. Once this is done, we will update your application status and let you know our decision.<br><br>
 			If you have any supporting documents that you need to provide, please submit them to us as soon as possible. You can submit them in person at your nearest Service Canada office or you can mail them to Service Canada.
 		</details>
 	</li>
 	<li>
 		<details>
-			<summary><a href="#">01 May 2017 - Complete<br>Old Age Security, Old Age Security</a></summary>
+			<summary>01 May 2017 - Complete<br>Old Age Security, Old Age Security</summary>
 			We have finalized your application.<br><br>If you have not received a decision letter, you can expect one within 10-15 business days.<br><br><strong>Note:</strong> If your benefit has been approved, you can view information about your payment on our <a href="#">View my payment information page</a>. The amount will be available once your first payment has been issued.
 
 		</details>
 	</li>
 </ul><br>	
 	
-<a href="#">Return to Canada Pension Plan/Old Age Security main menu</a>	<br><br>
 
-  
+  <p><a href="/MSCA-Prototype/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html">Return to Canada Pension Plan/Old Age Security main menu</a></p><br><br>
 	
 </section>
 </aside>
