--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
@@ -173,8 +173,8 @@
 <h4>Please select deduction type:</h4>
 
 <div class="radio">
-   < for="percentage"  label><input id="percentage" type="radio" name="perradio">Percentage</label>
-   < for="Exact amount"  label><input id="Exact amount" type="radio" name="exactradio">Exact amount</label>
+	<input type="radio" name="Percentage" value="Percentage"> Percentage
+	<input type="radio" name="Exact amount" value="Exact amount"> Exact amount
 </div><br>
 
 <h4>Percentage</h4>
