--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
@@ -173,15 +173,21 @@
 <h4>Please select deduction type:</h4>
 
 <div class="radio">
-	<input type="radio" name="Percentage" value="Percentage"> Percentage
+	<input type="radio" name="Percentage" value="Percentage"> Percentage<br>
 	<input type="radio" name="Exact amount" value="Exact amount"> Exact amount
 </div><br>
 
 <h4>Percentage</h4>
+	<div class="row">
+  <div class="col-xs-4">
+	
 <div class="input-group">
-	<input name="number" type="number" id="number" class="form-control" />
+	<input name="percentage" type="number" id="percentage" class="form-control" />
 	<label class="input-group-addon" for="number">%</label> 
 </div><br><br>
+		</div>
+	</div>
+	  
 <a class="btn btn-primary" href="###">Continue</a>
 <a class="btn btn-default" href="###">Cancel</a><br>
 
