--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
@@ -182,14 +182,15 @@
   <div class="col-xs-4">
 	
 <div class="input-group">
-	<input name="percentage" type="number" id="percentage" class="form-control" />
+	
+	<input name="percentage" type="text" id="percentage" class="form-control mrgn-bttm-md" placeholder="Default input"/>
 	<label class="input-group-addon" for="number">%</label> 
 </div><br><br>
 		</div>
 	</div>
 	  
 <a class="btn btn-primary" href="###">Continue</a>
-<a class="btn btn-default" href="###">Cancel</a><br>
+<a class="btn btn-default" href="###">Cancel</a><br><br>
 
 
 
