--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
@@ -183,7 +183,7 @@
 	
 <div class="input-group">
 	
-	<input name="percentage" type="text" id="percentage" class="form-control mrgn-bttm-md" placeholder="Default input"/>
+	<input name="percentage" type="text" id="percentage" class="form-control mrgn-bttm-md"/>
 	<label class="input-group-addon" for="number">%</label> 
 </div><br><br>
 		</div>
