--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
@@ -171,15 +171,16 @@
 </div><br>
 
 <h4>Please select deduction type:</h4>
-
+<div class="container">
 <div class="radio">
 	<input type="radio" name="Percentage" value="Percentage"> Percentage<br>
 	<input type="radio" name="Exact amount" value="Exact amount"> Exact amount
-</div><br>
+</div>
+	</div><br>
 
 <h4>Percentage</h4>
 	<div class="row">
-  <div class="col-xs-4">
+  <div class="col-xs-2">
 	
 <div class="input-group">
 	
