--- a/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
+++ b/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html
@@ -176,7 +176,7 @@
 	<input type="radio" name="Percentage" value="Percentage"> Percentage<br>
 	<input type="radio" name="Exact amount" value="Exact amount"> Exact amount
 </div>
-	</div><br>
+	</div>
 
 <h4>Percentage</h4>
 	<div class="row">
