--- a/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
+++ b/scenarioA/services/my-account/MSCA/landing-page-cpp-oas.html
@@ -197,65 +197,65 @@
         <div class="panel-body">
           <h2 id="a1-1" class="h3 mrgn-tp-0">CPP Application</h2>
           <p>Apply for CPP or view detailed information on your application status.</p>
-          <button type="button" class="btn btn-default">Apply for my CPP retirement pension</button>
-			<button type="button" class="btn btn-default">Apply for my CPP disability benefit</button>
-          <button type="button" class="btn btn-default">Application status</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-Retirement.html';" type="button" class="btn btn-default">Apply for my CPP retirement pension</button>
+			<button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/CPP-disability.html';" type="button" class="btn btn-default">Apply for my CPP disability benefit</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status.html';" type="button" class="btn btn-default">Application status</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-2" class="h3 mrgn-tp-0">OAS/GIS Pension Application</h2>
           <p>Apply for OAS/GIS or view detailed information on your application status.</p>
-          <button type="button" class="btn btn-default">Apply for my OAS pension and the GIS</button>
-          <button type="button" class="btn btn-default">Application status</button>
-          <button type="button" class="btn btn-default">Delay receiving my OAS pension</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Apply-for-CPP-benifits/OAS-GIS.html';" type="button" class="btn btn-default">Apply for my OAS pension and the GIS</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Application-status.html';" type="button" class="btn btn-default">Application status</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Delay-Receiving-OAS.html';" type="button" class="btn btn-default">Delay receiving my OAS pension</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <h2 id="a1-3" class="h3 mrgn-tp-0">Personal information</h2>
+          <h2 id="a1-3" class="h3 mrgn-tp-0">View/Change personal information</h2>
           <p>Personal information is used to capture your mailing address, province of residence and your preferred language specific to your CPP application(s). All correspondance will be sent to the address, including any payments.</p>
-          <button type="button" class="btn btn-default">Address</button>
-          <button type="button" class="btn btn-default">Telephone number</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-address.html';" type="button" class="btn btn-default">Address</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/My-telephone.html';" type="button" class="btn btn-default">Telephone number</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/direct-deposit-CPP-OAS.html';" type="button" class="btn btn-default">Direct deposit (CPP/OAS)</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-4" class="h3 mrgn-tp-0">Payment and Direct Deposit</h2>
           <p>The payment and direct deposit is used to view your most up-to-date payment reports and sign up for Direct Deposit.</p>
-          <button type="button" class="btn btn-default">Payment information</button>
-          <button type="button" class="btn btn-default">Direct deposit (CPP/OAS)</button>
+           <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Payment-Info.html';" type="button" class="btn btn-default">Payment information</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-5" class="h3 mrgn-tp-0">CPP Contributions and Benefits</h2>
           <p>CPP Contribtuions and Benefits is used to view your contributions and your pensionable earnings.</p>
-          <button type="button" class="btn btn-default">CPP contributions</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/CPP-Contributions.html';" type="button" class="btn btn-default">CPP contributions</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-6" class="h3 mrgn-tp-0">CPP Child-Rearing Provision</h2>
           <p>If you took time off from work or worked less to look after your young children, you may be able to increase the amount of your CPP retirement pension and other CPP benefits with the child-rearing provisions.</p>
-          <button type="button" class="btn btn-default">Request my Child-Rearing Provision</button>
-			<button type="button" class="btn btn-default">My Child-Rearing Provision</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Request-Child-Rearing-Provision.html';" type="button" class="btn btn-default">Request my Child-Rearing Provision</button>
+			<button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/View-Change-Info/Child-Rearing-Provision-Transaction-Info.html';" type="button" class="btn btn-default">My Child-Rearing Provision</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-7" class="h3 mrgn-tp-0">Tax information</h2>
           <p>Consider your overall tax situation before you choose to have federal tax deducted from your CPP and OAS monthly benefits. You can change the amount of federal taxes deducted at any time.</p>
-          <button type="button" class="btn btn-default">Tax slips (T4A, NR4)</button>
-          <button type="button" class="btn btn-default">Tax slip mailing options</button>
-          <button type="button" class="btn btn-default">Federal voluntary tax deductions for CPP/OAS</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html';" type="button" class="btn btn-default">Tax slips (T4A, NR4)</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/Tax-Slips-T4A-NR4.html';" type="button" class="btn btn-default">Tax slip mailing options</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/Tax-For-CPP-OAS/OAS/Federal-Voluntary-Tax-Deduction.html';" type="button" class="btn btn-default">Federal voluntary tax deductions for CPP/OAS</button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
           <h2 id="a1-8" class="h3 mrgn-tp-0">Consent on my behalf</h2>
           <p>Use this application to name an authorized person (for example: your spouse, a member of your family, a friend or your accountant, etc.) to whom you give consent to communicate on your behalf with Service Canada about your CPP and OAS.</p>
-          <button type="button" class="btn btn-default">Give consent for someone to communicate with CPP/OAS on my behalf</button>
+          <button onclick="window.location.href = '/MSCA-Prototype/scenarioA/services/my-account/MSCA/CPP-OAS/My-Contact/Consent-to-Communicate.html';" type="button" class="btn btn-default">Give consent for someone to communicate with CPP/OAS on my behalf</button>
         </div>
       </div>
     </div>
